<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/my_first_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_first_button"
        android:layout_below="@+id/my_first_switch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp" />

    <ToggleButton
        android:id="@+id/my_first_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/toggle_button_unpressed"
        android:textOn="@string/toggle_button_pressed"
        android:textSize="24sp"
        android:layout_below="@+id/my_first_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Switch
        android:id="@+id/my_first_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/switch_unselected"
        android:textOn="@string/switch_selected"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/my_first_toggle_button"
        android:layout_toStartOf="@+id/my_first_toggle_button" />

    <CheckBox
        android:id="@+id/my_first_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box_unselected"
        android:layout_below="@+id/my_first_toggle_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp" />

</RelativeLayout>
